command error response + reimplemented: -warns -pokemon command -pin archiving

--- a/DudesBot.csproj
+++ b/DudesBot.csproj
@@ -19,6 +19,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="PokeApiNet" Version="3.0.2" />
   </ItemGroup>
 
 </Project>
