--- a/DudesBot.csproj
+++ b/DudesBot.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="DSharpPlus" Version="4.1.0-nightly-00917" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.1.0-nightly-00917" />
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.1.0-nightly-00917" />
+    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
