--- a/Resources/TemplateBotConfig.json
+++ b/Resources/TemplateBotConfig.json
@@ -4,5 +4,6 @@
     "PinWatchedList" : [],
     "BotWatch" : false,
     "CommandPrefix" : ["r!"],
-    "DBPath" : "path to sqlite database"
+    "DBPath" : "path to sqlite database",
+    "QuietChannels" : [0]
 }
