--- a/DudesBot.csproj
+++ b/DudesBot.csproj
@@ -6,9 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.1.0-nightly-00947" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.1.0-nightly-00947" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.1.0-nightly-00947" />
+    <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-00968" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.2.0-nightly-00968" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.2.0-nightly-00968" />
+    <PackageReference Include="IDoEverything.DSharpPlus.SlashCommands" Version="2.0.1" />
     <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
