--- a/DudesBot.csproj
+++ b/DudesBot.csproj
@@ -3,12 +3,15 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <RestoreAdditionalProjectSources>
+      https://nuget.emzi0767.com/api/v3/index.json;
+    </RestoreAdditionalProjectSources>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-00968" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.2.0-nightly-00968" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.2.0-nightly-00968" />
+    <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-01003" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.2.0-nightly-01003" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.2.0-nightly-01003" />
     <PackageReference Include="IDoEverything.DSharpPlus.SlashCommands" Version="2.0.1" />
     <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
