--- a/DudesBot.csproj
+++ b/DudesBot.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.2.0-nightly-01003" />
     <PackageReference Include="IDoEverything.DSharpPlus.SlashCommands" Version="2.0.1" />
     <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="8.0.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.11.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.11.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="3.11.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
