--- a/Resources/TemplateBotConfig.json
+++ b/Resources/TemplateBotConfig.json
@@ -5,5 +5,9 @@
     "BotWatch" : false,
     "CommandPrefix" : ["r!"],
     "DBPath" : "path to sqlite database",
-    "QuietChannels" : [0]
+    "QuietChannels" : [0],
+    "WarningCommand" : true,
+    "ReminderCommand" : true,
+    "UndeleteCommand" : true,
+    "GuildID" : 0
 }
